# hikkarr

./: CMakeLists.txt  README.md  install.sh  main.cpp  typesql.txt
API/: cli_to_api.py  ytvideo.py
API/REST/: HTTP.cpp  HTTP.hpp  HTTPS.cpp  HTTPS.hpp  request.cpp  request.hpp
REST/: HTTP.cpp  HTTP.h  HTTPS.cpp  HTTPS.h  request.cpp  request.h
client/: client.hpp  command.hpp  embed.hpp
client/Threading/: ThreadManager.cpp  ThreadManager.hpp
client/player/: player.cpp  player.hpp
client/player/Sources/: SharedFile.cpp  SharedFile.hpp  Source.cpp  Source.hpp  YTVideo.cpp  YTVideo.hpp
commands/: 8ball.cpp  8ball.hpp  avatar.cpp  avatar.hpp  botinfo.cpp  botinfo.h  clear.cpp  clear.hpp  load.cpp  load.hpp  play.cpp  play.hpp  test.cpp  test.hpp
events/: all.hpp  on_ready.cpp  on_ready.hpp  on_slashcommand.cpp  on_slashcommand.hpp
util/: SysAPI.cpp  SysAPI.h  cfgparser.hpp  database.cpp  database.hpp  database_type.h  type.h  util.hpp
